k8s/notes-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: notes-db
spec:
  serviceName: "notes-db"
  replicas: 1
  selector:
    matchLabels:
      app: notes-db
  template:
    metadata:
      labels:
        app: notes-db
    spec:
      containers:
        - name: postgres
          image: postgres:17.6-bookworm
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pkb-notes-db-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: pkb-notes-db-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: notes-db
spec:
  selector:
    app: notes-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
