k8s/notes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes
  template:
    metadata:
      labels:
        app: notes
    spec:
      containers:
        - name: notes-app
          image: pkb-notes:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: notes-service
spec:
  selector:
    app: notes
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
