k8s/users-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: users-db
spec:
  serviceName: "users-db"
  replicas: 1
  selector:
    matchLabels:
      app: users-db
  template:
    metadata:
      labels:
        app: users-db
    spec:
      containers:
        - name: postgres
          image: postgres:17.6-bookworm
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pkb-users-db-data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["pg_isready" ,"-U" ,"$(POSTGRES_USER)"]
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            exec:
              command: ["pg_isready" ,"-U" ,"$(POSTGRES_USER)"]
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
  volumeClaimTemplates:
    - metadata:
        name: pkb-users-db-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: users-db
spec:
  selector:
    app: users-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
