k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/limit-connections: "50"
    nginx.ingress.kubernetes.io/limit-rpm: "240"
    nginx.ingress.kubernetes.io/limit-rps: "10"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "2"
spec:
  ingressClassName: nginx
  rules:
    - host: pkb.local
      http:
        paths:
          - path: /api/v\d+/(users|access-token)
            pathType: ImplementationSpecific
            backend:
              service:
                name: users-service
                port:
                  number: 8000
          - path: /api/v\d+/(notes|tags)
            pathType: ImplementationSpecific
            backend:
              service:
                name: notes-service
                port:
                  number: 8000
